--- a/Assets/CSS/decorate.css
+++ b/Assets/CSS/decorate.css
@@ -1,4 +1,4 @@
-body {padding-top: 50px; }
+/*body {padding-top: 50px; }
 
 
 .container-fluid {
@@ -8,4 +8,26 @@ body {padding-top: 50px; }
 
 .navbarnavbar-expand-lgnavbar-lightbg-light {
 	padding-bottom: 10px; 
+}
+*/
+
+/*Style test navbar*/
+#navbar {
+	overflow: hidden;
+	background-color: #333;
+}
+
+/* Navbar links */
+#navbar a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px;
+	text-decoration: none;
+}
+
+/* Page content */
+.content {
+	padding: 16px;
 }
