--- a/Assets/CSS/decorate.css
+++ b/Assets/CSS/decorate.css
@@ -18,7 +18,8 @@ body {
 /*Style test navbar*/
 #navbar {
 	overflow: hidden;
-	background-color: #333;
+	background-color: #b4b4b4;
+	opacity: 0.5; 
 }
 
 /* Navbar links */
@@ -27,7 +28,7 @@ body {
 	display: block;
 	color: #f2f2f2;
 	text-align: center;
-	padding: 14px;
+	padding: 12px;
 	text-decoration: none;
 }
 
