--- a/Assets/CSS/decorate.css
+++ b/Assets/CSS/decorate.css
@@ -1,15 +1,3 @@
-/*body {padding-top: 50px; }
-
-
-.container-fluid {
-	 padding: 25px 50px 75px;
-}
-
-
-.navbarnavbar-expand-lgnavbar-lightbg-light {
-	padding-bottom: 10px; 
-}
-*/
 
 body {
 	background-color: #FFFFFF; 
@@ -78,4 +66,11 @@ body {
 
 #p1 {
 	margin-left: 25px; 
+}
+
+
+/*Drop down*/
+.dropdown {
+	float: left;
+	overflow: hidden;
 }
