trying to do something with parallex scrolling

--- a/Assets/CSS/dropdown.css
+++ b/Assets/CSS/dropdown.css
@@ -67,3 +67,25 @@
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+
+/* Parallax Scrolling*/
+body, html {
+    height: 100%;
+}
+
+.parallax { 
+    /* The image used */
+    background-image: url("file:///C:/Users/loret/Desktop/Ghana2017/_MG_5657.JPG");
+
+
+    background-image: url("file:///C:/Users/loret/Desktop/Ghana2017/_MG_5462.JPG")
+    /* Full height */
+    height: 100%; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
