--- a/Assets/CSS/decorate.css
+++ b/Assets/CSS/decorate.css
@@ -1,12 +1,38 @@
 
 
-body {
+body, html {
 	background-color: #FFFFFF; 
+	height: 100% 
 }
 
-#caption {
-	text-align: center; 
-}
+/*Hero image*/
+.hero-image {
+	/*image used*/
+	background-image: url("C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg")
+
+ /* Set a specific height */
+    height: 50%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+	}
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+	}
+
+
+
+
 /*Style test navbar*/
 #navbar {
 	overflow: hidden;
@@ -67,16 +93,17 @@ body {
 
 #p1 {
 	margin-left: 25px; 
+
 }
 
 /*my picture edits*/
 #lore{ 
-border-radius: 50%; 
+border-radius: 8px; 
+float: left; 
+padding-bottom: 30px; 
+padding-right: 10px; 
  } 
 
-#home{
-	background-image: url("C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg")
-}
 
 #story{
 	color: white; 
