--- a/Assets/CSS/decorate.css
+++ b/Assets/CSS/decorate.css
@@ -5,21 +5,11 @@ body, html {
 	height: 100% 
 }
 
-/*Hero image*/
-.hero-image {
-	/*image used*/
-	background-image: url("C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg")
 
- /* Set a specific height */
-    height: 50%;
-
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-	}
-
+/*Top part of website*/
+#caption {
+	padding-bottom: 100px; 
+}
 /* Place text in the middle of the image */
 .hero-text {
     text-align: center;
