--- a/Assets/CSS/decorate.css
+++ b/Assets/CSS/decorate.css
@@ -11,7 +11,7 @@ body, html {
 	padding-bottom: 80px; 
 }
 
-/*Style test navbar*/
+/* Navbar container */
 #navbar {
 	overflow: hidden;
 	background-color: #b4b4b4;
@@ -26,7 +26,31 @@ body, html {
 	text-align: center;
 	padding: 12px;
 	text-decoration: none;
+	overflow: hidden; 
 }
+
+/*Dropdown container*/
+.dropdown {
+	float: left; 
+	overflow: hidden;
+}
+
+/*Black background for hover*/
+#navbar a:hover, .dropdown:hover {
+	background-color: black; 
+}
+
+/*Dropdown content (hidden by default)*/
+.dropcontent {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px; 
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1; 
+}
+
+/* Links inside */
 
 /* Page content */
 .content {
