--- a/Assets/CSS/decorate.css
+++ b/Assets/CSS/decorate.css
@@ -1,5 +1,3 @@
-
-
 body, html {
 	background-color: #FFFFFF; 
 	height: 100% 
@@ -11,7 +9,7 @@ body, html {
 	padding-bottom: 80px; 
 }
 
-/* Navbar container */
+/*Style test navbar*/
 #navbar {
 	overflow: hidden;
 	background-color: #b4b4b4;
@@ -24,67 +22,9 @@ body, html {
 	display: block;
 	color: #f2f2f2;
 	text-align: center;
-	padding: 10px;
+	padding: 12px;
 	text-decoration: none;
-	overflow: hidden; 
 }
-
-/*Dropdown container*/
-.dropdown {
-	float: left; 
-	overflow: hidden;
-	position: relative;
-	display: inline-block;
-}
-
-/* Dropdown button */
-.dropdown .dropbtn {
-  border: none;
-  outline: none;
-  color: white;
-  padding: 4px;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
-
-/*Black background for hover*/
-#navbar a:hover, .dropdown:hover {
-	background-color: black; 
-}
-
-/* Down button decoraction*/
-
-/*Dropdown content (hidden by default)*/
-.dropcontent {
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px; 
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1; 
-}
-
-/* Links inside dropdown*/
-.dropcontent a {
-	float: none;
-	color: black; 
-	padding: 12px 14px; 
-	text-decoration: none;
-	display: block;
-	text-align: left;
-}
-
-/* Add grey background to dropdown links on hover*/
-.dropcontent a:hover {
-	background-color: #ddd; 
-}
-
-/* Show dropdown menu on hover */
-.dropbtn:hover .dropcontent {
-	display: block;
-}
-
 
 /* Page content */
 .content {
