--- a/test.css
+++ b/test.css
@@ -1,10 +1,8 @@
 /* Navbar container */
 .navbar {
   overflow: hidden;
-  background-color: #333;
-  font-family: Arial;
-  overflow: hidden;
-  background-color: #333;
+  background-color: #b4b4b4;
+  opacity: 0.5; 
 }
 
 /* Links inside the navbar */
@@ -12,6 +10,7 @@
   float: left;
   font-size: 16px;
   color: white;
+  display: block;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -37,7 +36,7 @@
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: black;
 }
 
 /* Dropdown content (hidden by default) */
@@ -62,7 +61,7 @@
 
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #DADBC9;
 }
 
 /* Show the dropdown menu on hover */
